# e-pip

./: .gitignore  README.md  anketa.py  config.json  pyproject.toml  requirements.txt  simple_interactions.py  stezcordbot.py  vesmir.py
archive/: archive.py
fotky/: fotky.py
install/: epip.service
levitiomail/: checkmail.py
vesmir/: vesmir.py
voting/: anketa.py  emojis.txt
webcheck/: check.py  webs.json
